# pdf2md

./: .gitignore  Cargo.toml  README.md
crates/markdown-gen/: Cargo.toml
crates/markdown-gen/src/: format.rs  lib.rs  writer.rs
crates/pdf-extract/: Cargo.toml
crates/pdf-extract/src/: document.rs  lib.rs  metadata.rs  test_utils.rs  text.rs  validation.rs
crates/pdf2md/: Cargo.toml  build.rs
crates/pdf2md/scripts/: build.sh  generate_fixture.rs
crates/pdf2md/src/: cli.rs  config.rs  dry_run.rs  error.rs  lib.rs  logging.rs  main.rs
crates/pdf2md/tests/: integration_test.rs
docs/: architecture.md  design.md  mermaid-contrast.md  plan.md  prd.md  process.md
scripts/: demo.sh  generate_fixture.rs  generate_test_pdf.py
src/: cli.rs  dry_run.rs  error.rs  lib.rs  markdown.rs  pdf.rs
src/error/: exit_codes.rs  types.rs
src/markdown/: format.rs  writer.rs
src/pdf/: document.rs  metadata.rs  text.rs  types.rs  validation.rs
wiki/: Architecture-Diagrams.md  Architecture-Overview.md  CLI-Component.md  Configuration-Component.md  Data-Flow-Sequences.md  Development-Process.md  Error-Handling-Component.md  Home.md  Markdown-Generation-Component.md  PDF-Processing-Component.md  Testing-Strategy.md  _Sidebar.md
