[package]
name = "pdf2md"
version = "0.1.0"
edition = "2024"
authors = ["Michael A. Wright"]
license = "MIT"
description = "Convert PDF documents to Markdown format"
homepage = "https://github.com/softwarewrighter/pdf2md"
repository = "https://github.com/softwarewrighter/pdf2md"
readme = "README.md"
keywords = ["pdf", "markdown", "cli", "converter", "text-extraction"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
lopdf = "0.34"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"

[[bin]]
name = "generate_fixture"
path = "scripts/generate_fixture.rs"
required-features = []
