[workspace]
resolver = "2"
members = [
    "crates/pdf-extract",
    "crates/markdown-gen",
    "crates/pdf2md",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Michael A. Wright"]
license = "MIT"
repository = "https://github.com/softwarewrighter/pdf2md"

[workspace.dependencies]
# Shared dependencies across workspace
log = "0.4"
tempfile = "3.8"

# PDF processing
lopdf = "0.34"

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"

# Testing
assert_cmd = "2.0"
predicates = "3.1"
