[package]
name = "pdf2md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Convert PDF documents to Markdown format"
homepage = "https://github.com/softwarewrighter/pdf2md"
readme = "../../README.md"
keywords = ["pdf", "markdown", "cli", "converter", "text-extraction"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
pdf-extract = { path = "../pdf-extract" }
markdown-gen = { path = "../markdown-gen" }
clap.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
lopdf.workspace = true

[[bin]]
name = "generate_fixture"
path = "scripts/generate_fixture.rs"
required-features = []

[dependencies.lopdf]
workspace = true
optional = true

[features]
default = []
generate-fixture = ["lopdf"]
